# ai-dev

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
companion-app/: .gitignore  README.md
companion-app/app/: __init__.py  cli.py  config.py  gitops.py  models.py  runner.py  templates.py  ui.py
companion-app/config/: hosts.example.json  (+3 more)
cve_agent/: __init__.py  analyzer.py  cli.py  config.py  contract.py  correlation_v2.py  correlator.py  corroboration_patch_context.py  demo.py  enrichment.py  evidence_correlation.py  inventory.py  models.py  ops.py  phase5.py  polling.py  reporter.py  runner.py  store.py  web.py
demo/: findings.demo.jsonl
docs/: ANALYST_GUIDE.md  APP_OVERVIEW.md  DATA_CONTRACT.md  OPTIMIZATION_GUIDE.md  RUNBOOK.md
examples/: assets.inventory.csv  assets.inventory.json
frontend/: app.js  feed-analytics-poc.html  index.html  styles.css
mappings/: atlas_rules.json  attack_rules.json
output/: findings.jsonl  state.json
schemas/: findings.schema.json
scripts/: smoke_test.py
tests/: test_correlation_v2.py  test_correlator.py  test_corroboration_patch_context.py  test_demo_dataset.py  test_enrichment.py  test_evidence_correlation.py  test_integration_signals.py  test_inventory.py  test_osv.py  test_phase3_workflow.py  test_phase5_features.py  test_polling.py  test_public_advisories.py  test_regional_sources.py  test_reporting_and_triage_workflow.py  test_scoring_deterministic.py  test_vendor_sources.py  test_web.py
(+83 files in other folders)
