[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cve-watcher"
version = "0.1.0"
description = "Agentic AI CVE watcher with multi-source enrichment and dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "pytest>=8.0.0",
  "pre-commit>=3.8.0",
]

[project.scripts]
ai-cve-watcher = "cve_agent.cli:main"

[tool.setuptools]
packages = ["cve_agent", "cve_agent.sources"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"


